Object parent_type 'ARMATURE' disappeared in Blender 2.75 #45553

Closed
opened 2015-07-24 23:48:18 +02:00 by Michael Nischt · 6 comments

We updated to Blender 2.75 recently and it breaks all armature deformed models with parent_type 'ARMATURE'.

In the UI it's not available anymore and models saved with 2.74 which used the parent_type show an empty selection that can only be changed to 'OBJECT' or 'BONE'. Interestingly, deformation still works in blender but our custom exporter which checks for parent_type 'ARMATURE' is broken as a result.

We couldn't find anything related to it in the release notes and the python API documentation still lists parent_type 'ARMATURE' a a valid option: http://www.blender.org/api/blender_python_api_2_75_release/bpy.types.Object.html

Currently, our exporter does not support the Armature modifier, only the usage via the parent_type. So this bug prevents us from upgrading to version 2.75.

We updated to Blender 2.75 recently and it breaks all armature deformed models with parent_type 'ARMATURE'. In the UI it's not available anymore and models saved with 2.74 which used the parent_type show an empty selection that can only be changed to 'OBJECT' or 'BONE'. Interestingly, deformation still works in blender but our custom exporter which checks for parent_type 'ARMATURE' is broken as a result. We couldn't find anything related to it in the release notes and the python API documentation still lists parent_type 'ARMATURE' a a valid option: http://www.blender.org/api/blender_python_api_2_75_release/bpy.types.Object.html Currently, our exporter does not support the Armature modifier, only the usage via the parent_type. So this bug prevents us from upgrading to version 2.75.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @michael_nischt

Added subscriber: @michael_nischt

This issue was referenced by 8cd14d421e

This issue was referenced by 8cd14d421edea4efea941a6159ac24779cae007a

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2015-07-25 10:40:02 +02:00

Own mistake in b318795c3b, thanks for reporting.

Own mistake in b318795c3b, thanks for reporting.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45553
No description provided.