Fix T45553: Object parent_type 'ARMATURE' disappeared in Blender 2.75.

Own stupid mistake in rBb318795c3b3d (ideally we should really not have that kind of ugly hacks :/ ).